# gui-pkinst

./: .gitignore  README  configure.ac  meson.build
data/: 10-gui-pkinst.rules  10-guipkinst.rules  Makefile.am  gui-pkinst.ui  meson.build
debian/: changelog  control  copyright  gui-pkinst.install  gui-pkinst.postinst
po/: POTFILES.in  en_GB.po  it.po  ko.po  zh_CN.po
src/: Makefile.am  gui-pkinst.c  meson.build
